# xswl-yaml-nsis

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py
docs/: CONFIG_REVIEW_SUMMARY.md  DEVELOPMENT_PLAN.md  architecture.md
examples/: complete.yaml  complete_installer.nsi  cpp_project.yaml  example.yaml  file_association_user.yaml  full_example.yaml  go_project.yaml  icon_examples.yaml  python_project.yaml  run_sigvna_converter.py  simple.yaml  simple_installer.nsi
scripts/: setup-venv38.ps1
tests/: __init__.py  test_cli.py  test_config.py  test_converter.py  test_integration.py
xswl_yaml_nsis/: __init__.py  cli.py  config.py  converter.py
xswl_yaml_nsis/converters/: __init__.py  base.py  convert_nsis.py
ypack/: cli.py  config.py  schema.py
ypack/converters/: base.py  context.py  convert_nsis.py  nsis_header.py  nsis_helpers.py  nsis_packages.py  nsis_sections.py
